# tpu-mini-sglang

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmark/: offline_benchmark.py
tpu_mini_sglang/: __init__.py  launch_server.py  model_config.py  server_args.py  sharding.py  torchax_utils.py  utils.py
tpu_mini_sglang/entrypoints/: engine.py  http_server.py  openai_protocol.py
tpu_mini_sglang/kernels/ragged_paged_attention/: kernel.py  kernel_hd64.py  tuned_block_sizes.py  tuned_block_sizes_hd64.py  util.py
tpu_mini_sglang/layers/: attention.py  rotary_embedding.py  sampler.py  swiglu.py
tpu_mini_sglang/layers/attention_backends/: base_attention_backend.py  naive_attention.py  native_attention.py  ragged_paged_attention.py
tpu_mini_sglang/managers/: detokenizer_manager.py  io_struct.py  schedule_batch.py  schedule_policy.py  scheduler.py  scheduler_struct.py  tokenizer_manager.py
tpu_mini_sglang/mem_cache/: allocator.py  memory_pool.py  radix_cache.py  tree_node.py
tpu_mini_sglang/model_executor/: forward_batch_info.py  model_runner.py
tpu_mini_sglang/models/: llama.py  model_base.py  model_loader.py  registry.py
tpu_mini_sglang/sampling/: sampling_batch_info.py  sampling_params.py
